# fin-app-project

./: README.md  fin_app.postman_collection.json
fin-app/: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  entrypoint.sh  init.sql  pyproject.toml  run_test.py
fin-app/fin_app/: models.py  serializer.py  views.py
fin-app/fin_app/application/: account_service.py  transaction_service.py
fin-app/fin_app/domain/: entities.py  errors.py
fin-app/fin_app/domain/ports/: repository.py
fin-app/fin_app/domain/services/: account_service_interface.py  transaction_service_interface.py
fin-app/fin_app/infrastructure/common/: errors.py
fin-app/fin_app/migrations/: 0001_initial.py  0002_alter_account_balance.py  0002_alter_transaction_account_alter_transaction_transfer.py  0003_alter_transaction_account_alter_transaction_transfer.py  0004_alter_transaction_account.py  0005_transaction_cancel_at.py
fin-app/fin_app/presentation/api/: server_builder.py
fin-app/setup/: settings.py  urls.py
fin-app/test/application/: test_account_service.py  test_transaction_service.py
fin-app/test/domain/: test_transfer.py
fin-app/test/factories/: domain_factory.py
fin-app/test/infrastructure/postgres_repository/: test_account_repository.py  test_transaction_repository.py
fin-app/tests/application/: test_account_service.py  test_transaction_service.py
fin-app/tests/domain/: test_transaction.py
fin-app/tests/factories/: domain_factory.py  model_factory.py
fin-app/tests/infrastructure/postgres_repository/: test_account_repository.py  test_transaction_repository.py
(+12 files in other folders)
